--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "ts-node-dev --respawn --transpile-only src/index.ts"
-},
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.17.0",
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -19,6 +21,7 @@
     "passport-github2": "^0.1.12"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/node": "^24.5.2",
@@ -28,5 +31,3 @@
     "typescript": "^5.9.2"
   }
 }
-
-
